<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:orderInCategory="200"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView">
    </item>

    <item
        android:id="@+id/action_now_playing"
        android:orderInCategory="200"
        android:title="@string/now_playing"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_up_coming"
        android:orderInCategory="200"
        android:title="@string/up_coming"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_popular"
        android:orderInCategory="200"
        android:title="@string/popular"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/action_top_rated"
        android:orderInCategory="200"
        android:title="@string/top_rated"
        app:showAsAction="never">
    </item>

</menu>